--- a/src/app/components/wizard/wizard.component.scss
+++ b/src/app/components/wizard/wizard.component.scss
@@ -21,7 +21,7 @@
 .form-btn {
   color: $color-high-contrast;
   background: $color-primary;
-  margin: 32px 0;
+  margin: 2rem 1rem;
   padding: 1.5rem;
   border-radius: 1rem;
   font-size: 2em;
