--- a/src/app/pages/form-page/form-page.component.scss
+++ b/src/app/pages/form-page/form-page.component.scss
@@ -38,25 +38,25 @@
   padding: 1rem;
 }
 
-.button-submit {
-  display: block;
-  width: 100%;
-  margin: 1rem 0rem 0rem;
-  border-radius: 1rem;
-  color: $color-high-contrast;
-  background-color: $color-primary;
-  height: 3rem;
+// .button-submit {
+//   display: block;
+//   width: 100%;
+//   margin: 1rem 0rem 0rem;
+//   border-radius: 1rem;
+//   color: $color-high-contrast;
+//   background-color: $color-primary;
+//   height: 3rem;
 
-  &:hover {
-    background: $color-primary;
-    transition: background-color 0.3s ease-in-out;
-  }
+//   &:hover {
+//     background: $color-primary;
+//     transition: background-color 0.3s ease-in-out;
+//   }
 
-  &:active {
-    box-shadow: inset 0 1px 3px rgba(177, 43, 43, 0.5);
-  }
+//   &:active {
+//     box-shadow: inset 0 1px 3px rgba(177, 43, 43, 0.5);
+//   }
 
-  &:disabled {
-    background-color: #6196b1;
-  }
-}
+//   &:disabled {
+//     background-color: #6196b1;
+//   }
+// }
