--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,6 +1,7 @@
 // PRIMARY COLORS
 $color-primary: #14aaf5;
 $color-success: #23c274;
+$color-failure: #ff0000;
 
 // HEADER & CONTRAST COLORS
 $color-high-contrast: #fff;
@@ -9,19 +10,17 @@ $color-low-contrast: #e5e5e5;
 // BACKGROUND, SURFACE, CARD COLORS & SHADOWS
 $color-background: #1f1f1f;
 $color-card-background: #282828;
-$color-card-border: rgba(255, 255, 255, 0.12);
 $color-input-field: #171717;
-$color-input-field2: #3a3a3a;
+$color-dark-grey: #5c5c5c;
+$card-shadow-0: 0 0 2rem 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 
 // FONT SIZES
 $default-font-size: 1.6rem;
-$card-title-font-size: 2.4rem;
-$header-font-size: 3.2rem;
-$project-title-font-size: 4rem;
-$carousel-header-font-size: 4.8rem;
+$button-font-size: 2rem;
+$title-font-size: 3rem;
 
 // SPACING
 $spacer-0: 0.5rem;
 $spacer-1: 1rem;
 $spacer-2: 2rem;
-$spacer-3: 4rem;
+$spacer-3: 2.5rem;
