form data is displayed in an alert as an object once 'Finish' is clicked

--- a/src/app/components/wizard/wizard.component.html
+++ b/src/app/components/wizard/wizard.component.html
@@ -43,7 +43,7 @@
     <button
       class="form-btn"
       [disabled]="steps[stepIndex].invalid"
-      (click)="nextStep()"
+      (click)="!isLastStep() ? nextStep() : wizardSubmit()"
     >
       {{ isLastStep() ? "Finish" : "Continue" }}
     </button>
